--- a/.gitignore
+++ b/.gitignore
@@ -1,41 +1,33 @@
-# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
+# Node
+node_modules/
+.next/
+out/
+dist/
+.cache/
+.vscode/
 
-# dependencies
-/node_modules
-/.pnp
-.pnp.*
-.yarn/*
-!.yarn/patches
-!.yarn/plugins
-!.yarn/releases
-!.yarn/versions
-
-# testing
-/coverage
-
-# next.js
-/.next/
-/out/
-
-# production
-/build
-
-# misc
+# System
 .DS_Store
-*.pem
+Thumbs.db
 
-# debug
+# Env
+.env
+.env.local
+.env.*.local
+
+# Logs
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
-.pnpm-debug.log*
+pnpm-debug.log*
 
-# env files (can opt-in for committing if needed)
-.env*
+# Build output
+*.log
+*.zip
 
-# vercel
-.vercel
+# Static hosting files
+.vercel/
+.netlify/
 
-# typescript
-*.tsbuildinfo
-next-env.d.ts
+# Supabase auto-gen
+supabase/.temp/
